# truma-ekit-control

./: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
.cargo/: config.toml
truma-ekit-controller/: Cargo.toml
truma-ekit-controller/src/: ekit.rs  fan.rs  gpio.rs  heating.rs  main.rs  overtemperature_protection.rs  peripherals.rs  relay.rs  server.rs  thermometer.rs  thermostat.rs  util.rs  wifi.rs
truma-ekit-controller/src/sensors/: mod.rs  tmp36.rs
truma-ekit-core/: Cargo.toml
truma-ekit-core/src/: adc.rs  ekit.rs  gpio.rs  i2c.rs  lib.rs  measurement.rs  powersaving.rs  throttle.rs  util.rs  wifi.rs
truma-ekit-core/src/peripherals/: bme280.rs  fan.rs  mod.rs  relay.rs  ssd1306.rs  tmp36.rs
truma-ekit-core/src/types/: mod.rs  percent.rs  temperature.rs
truma-ekit-thermostat/: Cargo.toml
truma-ekit-thermostat/src/: bme280.rs  caching.rs  ekit.rs  gpio.rs  input.rs  main.rs  output.rs  peripherals.rs  thermometer.rs  thermostat.rs  wifi.rs
