[package]
name = "truma-ekit-controller"
version = "0.1.0"
authors = ["Tom Knapen <tom@knapen.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
embedded-hal = "0.2"
embedded-svc = "0.24"
esp-idf-hal = "0.40"
esp-idf-svc = "0.44"
esp-idf-sys = { version = "0.32", features = ["binstart"] }
log = "0.4"
truma-ekit-core = { path = "../truma-ekit-core" }

[build-dependencies]
embuild = "0.30"
