[package]
name = "truma-ekit-core"
version = "0.1.0"
authors = ["Tom Knapen <tom@knapen.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
embedded-hal = "0.2"
esp-idf-hal = "0.40"
serde = { version = "1", features = ["serde_derive"] }

[dev-dependencies]
assert_approx_eq = "1"
